# simple-snake-game

./: CMakeLists.txt  README.md  elements.h  main.cpp  map.cpp  map.h  snake.cpp  snake.h
